# chessAIV2

./: .gitignore  CMakeLists.txt  Makefile  README.md  output.txt
cmake/: CompilerWarningsForCpp.cmake
software/: CMakeLists.txt
software/src/: aiEngine.cpp  aiEngine.hpp  bishop.cpp  bishop.hpp  board.cpp  board.hpp  boardEvaluator.cpp  boardEvaluator.hpp  displayBoard.cpp  displayBoard.hpp  enum.hpp  game.cpp  game.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  linePiece.cpp  linePiece.hpp  main.cpp  mempool.hpp  mempoolImpl.hpp  move.cpp  move.hpp  moveHistory.cpp  moveHistory.hpp  moveManager.cpp  moveManager.hpp  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  pieceSet.cpp  pieceSet.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp  spot.cpp  spot.hpp  (+2 more)
src/: board.hpp  enum.hpp  main.cpp  piece.hpp
