
# ----------------------------------------------------
# Environment
# ----------------------------------------------------

cmake_minimum_required (VERSION 3.15)

list (APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

# ----------------------------------------------------
# Version
# ----------------------------------------------------

# ----------------------------------------------------
# Project
# ----------------------------------------------------

set (PROJECT_NAME "chessAI")
project ("${PROJECT_NAME}"
    VERSION 2.0.0
    DESCRIPTION "Chess AI application."
    LANGUAGES C CXX)

# ----------------------------------------------------
# Configuration
# ----------------------------------------------------


# ----------------------------------------------------
# External
# ----------------------------------------------------


# ----------------------------------------------------
# Software
# ----------------------------------------------------

add_subdirectory (${CMAKE_CURRENT_LIST_DIR}/software)

# ----------------------------------------------------
# System
# ----------------------------------------------------


# ----------------------------------------------------
# Tests
# ----------------------------------------------------


# ----------------------------------------------------
# Packaging
# ----------------------------------------------------
